--- a/angularapp/angular.json
+++ b/angularapp/angular.json
@@ -19,7 +19,7 @@
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
 						"assets": [
-							"src/favicon.ico",
+							"src/favicon.svg",
 							"src/assets",
 							{
 								"glob": "**/*",
@@ -83,7 +83,7 @@
 					"options": {
 						"polyfills": ["zone.js", "zone.js/testing"],
 						"tsConfig": "tsconfig.spec.json",
-						"assets": ["src/favicon.ico", "src/assets"],
+						"assets": ["src/favicon.svg", "src/assets"],
 						"styles": ["src/styles.css"],
 						"scripts": [],
 						"karmaConfig": "karma.conf.js"
