--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -22,6 +22,7 @@
 		"@angular/platform-browser": "^16.2.0",
 		"@angular/platform-browser-dynamic": "^16.2.0",
 		"@angular/router": "^16.2.0",
+		"@canvasjs/angular-charts": "^1.2.0",
 		"monaco-editor": "^0.41.0",
 		"ngx-monaco-editor-v2": "^16.0.1",
 		"rxjs": "~7.8.0",
